; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/natd/extr_natd.c_StrToAddrAndPortRange.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/natd/extr_natd.c_StrToAddrAndPortRange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"%s is missing port number\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.in_addr*, i8*, i32*)* @StrToAddrAndPortRange to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @StrToAddrAndPortRange(i8* %0, %struct.in_addr* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.in_addr*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.in_addr* %1, %struct.in_addr** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i8* @strchr(i8* %10, i8 signext 58)
  store i8* %11, i8** %9, align 8
  %12 = load i8*, i8** %9, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %4
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @errx(i32 1, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %15)
  br label %17

17:                                               ; preds = %14, %4
  %18 = load i8*, i8** %9, align 8
  store i8 0, i8* %18, align 1
  %19 = load i8*, i8** %9, align 8
  %20 = getelementptr inbounds i8, i8* %19, i32 1
  store i8* %20, i8** %9, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = load %struct.in_addr*, %struct.in_addr** %6, align 8
  %23 = call i32 @StrToAddr(i8* %21, %struct.in_addr* %22)
  %24 = load i8*, i8** %9, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = call i32 @StrToPortRange(i8* %24, i8* %25, i32* %26)
  ret i32 %27
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @errx(i32, i8*, i8*) #1

declare dso_local i32 @StrToAddr(i8*, %struct.in_addr*) #1

declare dso_local i32 @StrToPortRange(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
